--- a/USCISTracker/USCISTracker/Views/SettingsPage.xaml
+++ b/USCISTracker/USCISTracker/Views/SettingsPage.xaml
@@ -97,6 +97,14 @@
                                 Margin="12,0,0,0" BorderThickness="0" Padding="5"
                                 Click="DeleteCacheButton_Click"></Button>
 
+                        <ToggleSwitch x:Name="EnableBackgroundUpdateToggleSwitch"
+                                      Header="Background Update"
+                                      OffContent="Disable" OnContent="Enable"
+                                      RelativePanel.Below="DeleteCacheLabelTextBox"
+                                      RelativePanel.AlignLeftWithPanel="True"
+                                      Toggled="EnableBackgroundUpdateToggleSwitch_Toggled"></ToggleSwitch>
+                                
+
 
 
                         <!--<TextBox x:Name="BusyTextTextBox" Width="200"
