add in the debug info for last app update / service completed

--- a/USCISTracker/USCISTracker/Views/SettingsPage.xaml
+++ b/USCISTracker/USCISTracker/Views/SettingsPage.xaml
@@ -108,6 +108,11 @@
                                  RelativePanel.Below="EnableBackgroundUpdateToggleSwitch"
                                  RelativePanel.AlignLeftWithPanel="True"
                                  BorderThickness="0"></TextBox>
+                        
+                        <TextBox x:Name="LastAppUpdateTextBox"
+                                 RelativePanel.Below="BackgroundTaskLastRunTextBox"
+                                 RelativePanel.AlignLeftWithPanel="True"
+                                 BorderThickness="0"></TextBox>
                                  
                                 
 
