--- a/USCISTracker/USCISTracker/Views/SettingsPage.xaml
+++ b/USCISTracker/USCISTracker/Views/SettingsPage.xaml
@@ -78,7 +78,8 @@
                                       IsOn="{Binding UseLightThemeButton, Mode=TwoWay}"
                                       OffContent="Dark theme" OnContent="Light theme"
                                       RelativePanel.AlignLeftWithPanel="True"
-                                      RelativePanel.Below="UseShellDrawnBackButtonToggleSwtich" />
+                                      RelativePanel.Below="UseShellDrawnBackButtonToggleSwtich" 
+                                      IsEnabled="True"/>
 
                         <TextBox x:Name="DeleteCacheLabelTextBox"
                                  Margin="0,0,0,0"
